custom form deleted

--- a/Normal Page/index.html
+++ b/Normal Page/index.html
@@ -42,7 +42,7 @@
                           <div class="row">    
                             <label for="example-text-input" class="col-2 col-form-label font-color">নামঃ</label>
                             <div class="col-10">
-                              <input class="form-control custom-form" type="text"  id="example-text-input" readonly>
+                              <input class="form-control " type="text"  id="example-text-input" readonly>
                             </div>
                           </div>
                        </div>
@@ -52,7 +52,7 @@
                           <div class="row">    
                             <label for="example-text-input" class="col-2 col-form-label font-color">Name</label>
                             <div class="col-10">
-                              <input class="form-control custom-form" type="text"  id="example-text-input" readonly>
+                              <input class="form-control " type="text"  id="example-text-input" readonly>
                             </div>
                           </div>
                        </div>
@@ -62,7 +62,7 @@
                         <div class="row">    
                           <label for="example-text-input" class="col-2 col-form-label font-color">পিতাঃ</label>
                           <div class="col-10">
-                            <input class="form-control custom-form" type="text" id="example-text-input" readonly>
+                            <input class="form-control " type="text" id="example-text-input" readonly>
                           </div>
                         </div>
                       </div>
@@ -72,7 +72,7 @@
                         <div class="row">    
                           <label for="example-text-input" class="col-2 col-form-label font-color">মাতাঃ</label>
                           <div class="col-10">
-                            <input class="form-control custom-form" type="text"  id="example-text-input" readonly>
+                            <input class="form-control " type="text"  id="example-text-input" readonly>
                           </div>
                         </div>
                       </div>
@@ -82,7 +82,7 @@
                         <div class="row">    
                           <label for="example-text-input" class="col-4 col-form-label font-color" style="padding: 0px;">Date Of Birth:</label>
                           <div class="col-8">
-                            <input class="form-control custom-form" type="text"  id="example-text-input" readonly>
+                            <input class="form-control " type="text"  id="example-text-input" readonly>
                           </div>
                         </div>
                       </div>
@@ -92,7 +92,7 @@
                             <label for="example-text-input" class="col-12 col-form-label font-color" style="padding: 2% 0;">Blood Group:</label>
                           </div>
                           <div class="col-8">
-                            <input class="form-control custom-form" type="text"  id="example-text-input" readonly>
+                            <input class="form-control " type="text"  id="example-text-input" readonly>
                           </div>
                         </div>
                       </div>
@@ -102,7 +102,7 @@
                         <div class="row">    
                           <label for="example-text-input" class="col-2 col-form-label font-color">ঠিকানা</label>
                           <div class="col-10">
-                            <input class="form-control custom-form" type="text"  id="example-text-input" readonly>
+                            <input class="form-control " type="text"  id="example-text-input" readonly>
                           </div>
                         </div>
                       </div>
@@ -112,7 +112,7 @@
                         <div class="row">    
                           <label for="example-text-input" class="col-2 col-form-label font-color">NID No</label>
                           <div class="col-10">
-                            <input class="form-control custom-form" type="text" id="example-text-input" readonly>
+                            <input class="form-control " type="text" id="example-text-input" readonly>
                           </div>
                         </div>
                       </div>
